--- a/templates/index.html
+++ b/templates/index.html
@@ -5,26 +5,62 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>    
     <title>Hello</title>
+    <style>
+        .progress-bar {
+            position: relative;
+            width: 80%;
+            margin: 0 auto;
+            background: #333;
+            height: 20px;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+
+        .progress {
+            position: absolute;
+            top: 0;
+            left: 0;
+            background: green;
+            height: 20px;
+            width: 0%;
+        }
+    </style>
 </head>
 <body>
    <h3 style="text-align:center; font-size:15em;color:green;">￥<span id="amount">0</span></h3>
+   <div style="text-align:center;font-size: 3em;color: green;">
+       <span id="progress">0</span>%
+   </div>
+   <div class="progress-bar">
+        <div class="progress" id="progress-bar"></div>
+   </div>
    <h5 style="text-align:center; font-size:5em;color:green">+<span id="diff">0</span></h5>
    <script>
        var previous = 0;
        var player = new Audio("/static/drop.mp3")
+       function getPercent(now) {
+            return Math.floor((now/200000)*10000)/100
+       }
+
        function getAmount() {
            $.get("/amount", function(res) {
                 let now = parseInt(res)
+                //let now = 69284;
                 if(now !== previous) {
-                   diff = now - previous;
+                   let diff = now - previous;
+                   let nowPercent = getPercent(now);
+                   document.title = "+" + diff + " - " + now + "/" + nowPercent + "%";
                    $("#diff").text(diff);
+                   $("#progress").text(nowPercent);
+                   $("#progress-bar").css("width", nowPercent + "%")
                    player.play()
                    previous = now
                 }
                 $("#amount").text(res)
            })
+
        }
 
        $(document).ready(() => {
